make sure that the live player on mobile closes if clicked

--- a/themes/greatermedia/assets/css/gm_styleguide.css
+++ b/themes/greatermedia/assets/css/gm_styleguide.css
@@ -2171,6 +2171,7 @@ blockquote p {
   display: none;
   float: left;
   width: 40%;
+  height: 34px;
   padding: 0 1em;
   margin: 0; }
   @media screen and (min-width: 768px) {
@@ -2178,6 +2179,7 @@ blockquote p {
       display: block;
       float: none;
       width: 100%;
+      height: auto;
       padding: 0 1em;
       margin: 1em 0 0;
       text-align: center; } }
