--- a/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
+++ b/themes/greatermedia/assets/css/sass/components/_liveplayer.scss
@@ -418,12 +418,14 @@
 	display: none;
 	float: left;
 	width: 40%;
+	height: 34px;
 	padding: 0 1em;
 	margin: 0;
 	@include bp(medium) {
 		display: block;
 		float: none;
 		width: 100%;
+		height: auto;
 		padding: 0 1em;
 		margin: 1em 0 0;
 		text-align: center;
